--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section id="photo-gallery" class="gallery">
-        <h2>My Photos</h2>
+        <h2>Our Photos</h2>
         <div class="gallery-grid" id="photoGrid">
             <!-- Your photos go here -->
             <div class="gallery-item">
