--- a/login.html
+++ b/login.html
@@ -6,13 +6,12 @@
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Add your styling here */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            background-image: url('assets/int.jpg');
+            background-image: url('assets/985803.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -28,39 +27,81 @@
         .login-box {
             background-color: #ffffff;
             padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
             width: 100%;
             max-width: 400px;
             text-align: center;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h2 {
             font-size: 1.8rem;
             margin-bottom: 20px;
-            color: #333;
+            color: rgb(8, 14, 8);
+            animation: matrixEffect 3s infinite;
+            text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
+        }
+
+        @keyframes matrixEffect {
+            0% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
+            50% { opacity: 0.5; transform: scale(1.05); text-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0; }
+            100% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
         }
 
         .input-group {
+            position: relative;
             margin-bottom: 20px;
             text-align: left;
+            animation: slideIn 1s ease-in-out;
         }
 
-        .input-group label {
-            font-size: 1rem;
-            color: #333;
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateX(-20px); }
+            to { opacity: 1; transform: translateX(0); }
         }
 
         .input-group input {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             font-size: 1rem;
-            margin-top: 5px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
+            border-radius: 8px;
+            border: 2px solid #ddd;
             box-sizing: border-box;
+            transition: all 0.3s ease;
+            background: transparent;
+            outline: none;
         }
 
+        .input-group label {
+            position: absolute;
+            left: 12px;
+            top: 12px;
+            font-size: 1rem;
+            color: #777;
+            pointer-events: none;
+            transition: all 0.3s ease;
+            background: #fff;
+            padding: 0 5px;
+        }
+
+        .input-group input:focus, .input-group input:valid {
+            border-color: #4CAF50;
+        }
+
+        .input-group input:focus + label, .input-group input:valid + label {
+            top: -10px;
+            left: 10px;
+            font-size: 0.9rem;
+            color: #4CAF50;
+        }
+
+        /* Animated Button */
         button {
             width: 100%;
             padding: 12px;
@@ -68,73 +109,57 @@
             color: white;
             font-size: 1.1rem;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            animation: pulse 1.5s infinite;
         }
 
         button:hover {
             background-color: #45a049;
+            transform: scale(1.05);
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
     </style>
 </head>
 <body>
-
     <div class="login-container">
         <div class="login-box">
             <h2>Login</h2>
             <form id="loginForm">
-                <!-- Username Field -->
                 <div class="input-group">
-                    <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
+                    <label for="username">Username</label>
                 </div>
-
-                <!-- Password Field -->
                 <div class="input-group">
-                    <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
+                    <label for="password">Password</label>
                 </div>
-
                 <button type="submit">Login</button>
             </form>
         </div>
     </div>
 
     <script>
-        // Function for handling login and username/password validation
         document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Prevent form submission
-
-            // Username and password entered by the user
+            event.preventDefault();
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
-
-            // Define the correct username and password (In a real app, this should be checked against the server)
-            const correctUsername = "user"; // Replace with your username
-            const correctPassword = "yourPassword"; // Replace with your password
-
-            // Validate the username and password
+            const correctUsername = "user";
+            const correctPassword = "yourPassword";
+            
             if (username === correctUsername && password === correctPassword) {
-                // If both are correct, set logged-in flag
                 localStorage.setItem("isLoggedIn", "true");
-                window.location.href = "splash.html";  // Redirect to the dashboard (index.html)
+                window.location.href = "splash.html";
             } else {
-                // If either username or password is incorrect, show an alert
                 alert("Invalid username or password! Please try again.");
             }
         });
-
-        if (username === correctUsername && password === correctPassword) {
-        // If both are correct, set logged-in flag
-        localStorage.setItem("isLoggedIn", "true");
-        window.location.href = "splash.html";  // Redirect to splash page first
-    } else {
-        // If either username or password is incorrect, show an alert
-        alert("Invalid username or password! Please try again.");
-    }
-
     </script>
-
 </body>
 </html>
