--- a/index.html
+++ b/index.html
@@ -403,7 +403,163 @@
             <div class="gallery-item">
                 <img src="gallery-project/1 (98).jpg" alt="Photo 98">
             </div>
-            <!-- More photo items here... -->
+            <div class="gallery-item">
+                <img src="gallery-project/1 (99).jpg" alt="Photo 99">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (100).jpg" alt="Photo 100">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (101).jpg" alt="Photo 101">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (102).jpg" alt="Photo 102">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (103).jpg" alt="Photo 103">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (104).jpg" alt="Photo 104">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (105).jpg" alt="Photo 105">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (106).jpg" alt="Photo 106">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (107).jpg" alt="Photo 107">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (108).jpg" alt="Photo 108">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (109).jpg" alt="Photo 109">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (110).jpg" alt="Photo 110">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (111).jpg" alt="Photo 111">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (112).jpg" alt="Photo 112">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (113).jpg" alt="Photo 113">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (114).jpg" alt="Photo 114">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (115).jpg" alt="Photo 115">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (116).jpg" alt="Photo 116">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (117).jpg" alt="Photo 117">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (118).jpg" alt="Photo 118">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (119).jpg" alt="Photo 119">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (120).jpg" alt="Photo 120">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (121).jpg" alt="Photo 121">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (122).jpg" alt="Photo 122">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (123).jpg" alt="Photo 123">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (124).jpg" alt="Photo 124">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (125).jpg" alt="Photo 125">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (126).jpg" alt="Photo 126">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (127).jpg" alt="Photo 127">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (128).jpg" alt="Photo 128">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (129).jpg" alt="Photo 129">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (130).jpg" alt="Photo 130">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (131).jpg" alt="Photo 131">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (132).jpg" alt="Photo 132">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (133).jpg" alt="Photo 133">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (134).jpg" alt="Photo 134">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (135).jpg" alt="Photo 135">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (136).jpg" alt="Photo 136">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (137).jpg" alt="Photo 137">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (138).jpg" alt="Photo 138">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (139).jpg" alt="Photo 139">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (140).jpg" alt="Photo 140">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (141).jpg" alt="Photo 141">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (142).jpg" alt="Photo 142">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (143).jpg" alt="Photo 143">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (144).jpg" alt="Photo 144">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (145).jpg" alt="Photo 145">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (146).jpg" alt="Photo 146">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (147).jpg" alt="Photo 147">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (148).jpg" alt="Photo 148">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (149).jpg" alt="Photo 149">
+            </div>
+            <div class="gallery-item">
+                <img src="gallery-project/1 (150).jpg" alt="Photo 150">
+            </div>
+            <!-- More photo items here... -->   
         </div>
     </section>
 
@@ -499,6 +655,22 @@
             </div>
             <div class="gallery-item">
                 <video controls>
+                    <source src="video/pic.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+        </div>
+        <div class="gallery-item">
+            <video controls>
+                <source src="video/pics.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="gallery-item">
+                <video controls>
+                    <source src="video/1 (16).mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            <div class="gallery-item">
+                <video controls>
                     <source src="video/1 (17).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -507,7 +679,11 @@
                 <video controls>
                     <source src="video/0228.mp4" type="video/mp4">
                     Your browser does not support the video tag.
-                </video>
+                </video><div class="gallery-item">
+                    <video controls>
+                        <source src="video/pics.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
             </div>
             <div class="gallery-item">
                 <video controls>
