--- a/login.html
+++ b/login.html
@@ -138,9 +138,9 @@
                 </div>
                 <div class="input-group">
                     <input type="password" id="password" name="password" required>
-                    <label for="password"> Password The Date We Meet month/day/year</label>
+                    <label for="password">Password Date We Meet month/day/year</label>
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit">💝💗Login💕💌</button>
             </form>
         </div>
     </div>
@@ -150,8 +150,8 @@
             event.preventDefault();
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
-            const correctUsername = "love";
-            const correctPassword = "02-09-2016";
+            const correctUsername = "Love";
+            const correctPassword = "02/09/2016";
             
             if (username === correctUsername && password === correctPassword) {
                 localStorage.setItem("isLoggedIn", "true");
