--- a/login.html
+++ b/login.html
@@ -134,13 +134,13 @@
             <form id="loginForm">
                 <div class="input-group">
                     <input type="text" id="username" name="username" required>
-                    <label for="username">Our Call sign</label>
+                    <label for="username">Our Endearment</label>
                 </div>
                 <div class="input-group">
                     <input type="password" id="password" name="password" required>
                     <label for="password">Password Date We Meet month/day/year</label>
                 </div>
-                <button type="submit">💝💗Login💕💌</button>
+                <button type="submit">💝💗Continue💕💌</button>
             </form>
         </div>
     </div>
