--- a/login.html
+++ b/login.html
@@ -1,165 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-image: url('assets/985803.png');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      background-image: url('gallery-project/phot.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
 
-        .login-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+    .login-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        .login-box {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-            animation: fadeIn 1s ease-in-out;
-        }
+    .login-box {
+      background-color: rgba(90, 90, 90, 0.15); /* Even more transparent */
+      backdrop-filter: blur(10px); /* Stronger frosted glass effect */
+      -webkit-backdrop-filter: blur(10px);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      animation: fadeIn 1s ease-in-out;
+    }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-        h2 {
-            font-size: 1.8rem;
-            margin-bottom: 20px;
-            color: rgb(8, 14, 8);
-            animation: matrixEffect 3s infinite;
-            text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
-        }
+    h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      color: rgb(8, 14, 8);
+      animation: matrixEffect 3s infinite;
+      text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
+    }
 
-        @keyframes matrixEffect {
-            0% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
-            50% { opacity: 0.5; transform: scale(1.05); text-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0; }
-            100% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
-        }
+    @keyframes matrixEffect {
+      0% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
+      50% { opacity: 0.5; transform: scale(1.05); text-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0; }
+      100% { opacity: 1; transform: scale(1); text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0; }
+    }
 
-        .input-group {
-            position: relative;
-            margin-bottom: 20px;
-            text-align: left;
-            animation: slideIn 1s ease-in-out;
-        }
+    .input-group {
+      position: relative;
+      margin-bottom: 20px;
+      text-align: left;
+      animation: slideIn 1s ease-in-out;
+    }
 
-        @keyframes slideIn {
-            from { opacity: 0; transform: translateX(-20px); }
-            to { opacity: 1; transform: translateX(0); }
-        }
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(-20px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
 
-        .input-group input {
-            width: 100%;
-            padding: 12px;
-            font-size: 1rem;
-            border-radius: 8px;
-            border: 2px solid #ddd;
-            box-sizing: border-box;
-            transition: all 0.3s ease;
-            background: transparent;
-            outline: none;
-        }
+    .input-group input {
+      width: 100%;
+      padding: 12px;
+      font-size: 1rem;
+      border-radius: 8px;
+      border: 2px solid #ddd;
+      box-sizing: border-box;
+      transition: all 0.3s ease;
+      background: transparent;
+      color: #fff;
+      outline: none;
+    }
 
-        .input-group label {
-            position: absolute;
-            left: 12px;
-            top: 12px;
-            font-size: 1rem;
-            color: #777;
-            pointer-events: none;
-            transition: all 0.3s ease;
-            background: #fff;
-            padding: 0 5px;
-        }
+    .input-group label {
+      position: absolute;
+      left: 12px;
+      top: 12px;
+      font-size: 1rem;
+      color: #fafafa;
+      pointer-events: none;
+      transition: all 0.3s ease;
+      background: rgba(119, 119, 119, 0.3); /* Lighter label background */
+      padding: 0 5px;
+    }
 
-        .input-group input:focus, .input-group input:valid {
-            border-color: #4CAF50;
-        }
+    .input-group input:focus, .input-group input:valid {
+      border-color: #4CAF50;
+    }
 
-        .input-group input:focus + label, .input-group input:valid + label {
-            top: -10px;
-            left: 10px;
-            font-size: 0.9rem;
-            color: #4CAF50;
-        }
+    .input-group input:focus + label,
+    .input-group input:valid + label {
+      top: -10px;
+      left: 10px;
+      font-size: 0.9rem;
+      color: #4CAF50;
+    }
 
-        /* Animated Button */
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 1.1rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: transform 0.3s ease, background-color 0.3s ease;
-            animation: pulse 1.5s infinite;
-        }
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #4CAF50;
+      color: white;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      animation: pulse 1.5s infinite;
+    }
 
-        button:hover {
-            background-color: #45a049;
-            transform: scale(1.05);
-        }
+    button:hover {
+      background-color: #45a049;
+      transform: scale(1.05);
+    }
 
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
-        }
-    </style>
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form id="loginForm">
-                <div class="input-group">
-                    <input type="text" id="username" name="username" required>
-                    <label for="username">Our Endearment</label>
-                </div>
-                <div class="input-group">
-                    <input type="password" id="password" name="password" required>
-                    <label for="password">Password Date We Meet month/day/year</label>
-                </div>
-                <button type="submit">💝💗Continue💕💌</button>
-            </form>
+  <div class="login-container">
+    <div class="login-box">
+      <h2>Login</h2>
+      <form id="loginForm">
+        <div class="input-group">
+          <input type="text" id="username" name="username" required />
+          <label for="username">Our Endearment</label>
         </div>
+        <div class="input-group">
+          <input type="password" id="password" name="password" required />
+          <label for="password">Password Date We Meet month/day/year</label>
+        </div>
+        <button type="submit">💝💗Continue💕💌</button>
+      </form>
     </div>
+  </div>
 
-    <script>
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-            const correctUsername = "Love";
-            const correctPassword = "02/09/2016";
-            
-            if (username === correctUsername && password === correctPassword) {
-                localStorage.setItem("isLoggedIn", "true");
-                window.location.href = "splash.html";
-            } else {
-                alert("Invalid username or password! Please try again.");
-            }
-        });
-    </script>
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+      const correctUsername = "Love";
+      const correctPassword = "02/09/2016";
+
+      if (username === correctUsername && password === correctPassword) {
+        localStorage.setItem("isLoggedIn", "true");
+        window.location.href = "splash.html";
+      } else {
+        alert("Invalid username or password! Please try again.");
+      }
+    });
+  </script>
 </body>
 </html>
