--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
     }
 
     .login-box {
-      background-color: rgba(90, 90, 90, 0.15); /* Even more transparent */
-      backdrop-filter: blur(10px); /* Stronger frosted glass effect */
+      background-color: rgba(90, 90, 90, 0.15);
+      backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       padding: 30px;
       border-radius: 12px;
@@ -59,7 +59,6 @@
     .input-group {
       position: relative;
       margin-bottom: 20px;
-      text-align: left;
       animation: slideIn 1s ease-in-out;
     }
 
@@ -70,7 +69,7 @@
 
     .input-group input {
       width: 100%;
-      padding: 12px;
+      padding: 12px 40px 12px 12px;
       font-size: 1rem;
       border-radius: 8px;
       border: 2px solid #ddd;
@@ -89,7 +88,7 @@
       color: #fafafa;
       pointer-events: none;
       transition: all 0.3s ease;
-      background: rgba(119, 119, 119, 0.3); /* Lighter label background */
+      background: rgba(119, 119, 119, 0.3);
       padding: 0 5px;
     }
 
@@ -103,6 +102,20 @@
       left: 10px;
       font-size: 0.9rem;
       color: #4CAF50;
+    }
+
+    .toggle-password {
+      position: absolute;
+      top: 50%;
+      right: 12px;
+      transform: translateY(-50%);
+      cursor: pointer;
+      color: #ccc;
+      font-size: 1.2rem;
+    }
+
+    .toggle-password:hover {
+      color: #fff;
     }
 
     button {
@@ -142,6 +155,7 @@
         <div class="input-group">
           <input type="password" id="password" name="password" required />
           <label for="password">Password Date We Meet month/day/year</label>
+          <span class="toggle-password" onclick="togglePassword()">👁️</span>
         </div>
         <button type="submit">💝💗Continue💕💌</button>
       </form>
@@ -149,6 +163,14 @@
   </div>
 
   <script>
+    function togglePassword() {
+      const passwordInput = document.getElementById("password");
+      const icon = document.querySelector(".toggle-password");
+      const isPassword = passwordInput.type === "password";
+      passwordInput.type = isPassword ? "text" : "password";
+      icon.textContent = isPassword ? "🙈" : "👁️";
+    }
+
     document.getElementById("loginForm").addEventListener("submit", function(event) {
       event.preventDefault();
       const username = document.getElementById("username").value;
