--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>I LOVE YOU SO MUCH</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script>
+    if (localStorage.getItem("isLoggedIn") !== "true") {
+      window.location.href = "login.html";
+    }
+  </script>
 </head>
 <body class="dark-mode">
     <!-- Preloader Section -->
