--- a/splash.html
+++ b/splash.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Special Message</title>
   <link rel="stylesheet" href="splash.css" />
+   <script>
+    if (localStorage.getItem("isLoggedIn") !== "true") {
+      window.location.href = "login.html";
+    }
+  </script>
   <style>
     body, html {
       margin: 0;
